--- a/app/views/chat.scala.html
+++ b/app/views/chat.scala.html
@@ -12,7 +12,7 @@
     <md-card layout="column" flex="none" style="width:800px">
         <md-content id="message-pane" layout="column" flex="90">
             <div ng-repeat="msg in messages" layout="column" layout-align="{{msg.sender=='BOT'? 'start start':'start end'}}">
-                <md-card class="message-card" ng-style=" msg.sender == 'BOT' ? { 'background-color': '#FFB74D'}   : {'background-color': '#81C784'}">
+                <md-card class="message-card" ng-style=" msg.sender == 'BOT' ? { 'background-color': '#F4A460','font-family':'Arial,Helvetica,sans-serif'}   : {'background-color': '#ff5700'}">
                     <span>{{msg.text}}</span>
                 </md-card>
             </div>
